--- a/config/mongoid.yml
+++ b/config/mongoid.yml
@@ -4,21 +4,25 @@ development:
     # Defines the default client. (required)
     default:
       # Mongoid can connect to a URI accepted by the driver:
-      # uri: mongodb://user:password@mongodb.domain.com:27017/roterize_api_development
+      uri: <%= ENV.fetch("MONGODB_URL")  %> 
 
       # Otherwise define the parameters separately.
       # This defines the name of the default database that Mongoid can connect to.
       # (required).
-      database: roterize_api_development
+      # database: roterize_api_development
       # Provides the hosts the default client can connect to. Must be an array
       # of host:port pairs. (required)
-      hosts:
-        - localhost:27017
+      #hosts:
+      #  - localhost:27017
       options:
         # Note that all options listed below are Ruby driver client options (the mongo gem).
         # Please refer to the driver documentation of the version of the mongo gem you are using
         # for the most up-to-date list of options.
 
+        # The timeout in seconds for selecting a server for an operation. (default: 30)
+        server_selection_timeout: 30
+        database: roterize_api_development
+        
         # Change the default write concern. (default = { w: 1 })
         # write:
         #   w: 1
@@ -65,8 +69,7 @@ development:
         # The time in seconds for selecting servers for a near read preference. (default: 0.015)
         # local_threshold: 0.015
 
-        # The timeout in seconds for selecting a server for an operation. (default: 30)
-        # server_selection_timeout: 30
+        
 
         # The maximum number of connections in the connection pool. (default: 5)
         # max_pool_size: 5
@@ -285,15 +288,3 @@ development:
     # When this flag is set to true, the update and replace methods will
     # validate the paramters and raise an error if they are invalid.
     # validate_update_replace: false
-
-
-test:
-  clients:
-    default:
-      database: roterize_api_test
-      hosts:
-        - localhost:27017
-      options:
-        read:
-          mode: :primary
-        max_pool_size: 1
