[Tests] Add rspec tst for SignUp and Login

--- a/config/mongoid.yml
+++ b/config/mongoid.yml
@@ -288,3 +288,10 @@ development:
     # When this flag is set to true, the update and replace methods will
     # validate the paramters and raise an error if they are invalid.
     # validate_update_replace: false
+test:
+  clients:
+    default:
+      uri: <%= ENV.fetch("MONGODB_URL")  %>
+      options:
+        server_selection_timeout: 5
+        database: roterize_api_tst
