--- a/.github/workflows/rspec.yml
+++ b/.github/workflows/rspec.yml
@@ -21,8 +21,8 @@ jobs:
       - name: Run docker compose
         uses: hoverkraft-tech/compose-action@v2.0.1
         with:
-          compose-file: "/docker-compose.yml"
-          
+          compose-file: "/compose.yml"
+
       - name: Build services
         run: docker-compose build --no-cache
 
