--- a/.github/workflows/rspec.yml
+++ b/.github/workflows/rspec.yml
@@ -30,13 +30,25 @@ jobs:
       - name: Start dependencies
         run: docker compose -f compose.yml up
 
-      # Run tests in a fresh, one-off container for your app service.
-      # IMPORTANT: replace "web" with your actual service name in compose.yml
-      - name: Run RSpec
+      # Prepare app dirs, DB, then run RSpec in a fresh one-off container
+      - name: Run RSpec (one-off container)
+        env:
+          RAILS_ENV: test
+          RACK_ENV: test
+          # Provide BOTH in case your initializer reads credentials or ENV:
+          RAILS_MASTER_KEY: ${{ secrets.RAILS_MASTER_KEY }}          # to read Rails credentials
+          # Optional stabilizers (safe to include)
+          DISABLE_SPRING: "1"
+          BOOTSNAP_DISABLE: "1"
+          RAILS_LOG_TO_STDOUT: "1"
         run: |
-          docker compose -f compose.yml run --rm -T \
-            -e RAILS_ENV=test -e RACK_ENV=test \
-            web bundle exec rspec
+          docker compose -f compose.yml run --rm -T web bash -lc '
+            set -e
+            mkdir -p log tmp/pids tmp/cache tmp/sockets &&
+            touch log/test.log &&
+            chmod -R 777 log tmp &&
+            bundle exec rspec
+          '
 
       - name: Show logs on failure
         if: failure()
